libs/toolkit-contract-macros-tests/tests/ui/fail/rest_missing_http_attr.stderr
error: rest_contract method requires one of `#[get("...")]`, `#[post("...")]`, `#[put("...")]`, or `#[delete("...")]`
  --> tests/ui/fail/rest_missing_http_attr.rs:13:5
   |
13 |     async fn naked(&self, body: String) -> Result<u32, std::io::Error>;
   |     ^^^^^
